--- a/templates/template.html
+++ b/templates/template.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>Mouse Reeve</title>
+    <title>{{ recipe.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
@@ -24,6 +24,10 @@
         dt {
             float: left;
             padding-right: 1em;
+        }
+
+        .quantity {
+            font-weight: bold;
         }
     </style>
 </head>
@@ -92,16 +96,33 @@
                 <ul>
                     {% for entry in recipe.ingredients %}
                     {% if entry is string %}
-                    <li>
-                        {{ entry|ingredient_display }}
+
+                    {% if not ingredient_dict %}
+                    <li class="ingredient">
+                        {% for part in entry|ingredient_data %}
+                        {% for subpart in part %}
+                        <span{% if subpart.type == "quantity" %} class="quantity" data-quantity="{{ subpart.value }}"{% endif %}>
+                            {{ subpart.text }}
+                        </span>
+                        {% endfor %}
+                        {% endfor %}
                     </li>
+                    {% else %}
+                    <li class="ingredient">
+                        <span data-quantity="{{ ingredient_dict['quantity'] }}">
+
+                            {{ entry|ingredient_display }}
+                        </span>
+                    </li>
+                    {% endif %}
+
                     {% else %}
                     <li>
                         {% for step in entry %}
                         {{ step }}
                         <ul>
                             {% for substep in entry[step] %}
-                            <li>{{ substep|ingredient_display }}</li>
+                            <li data-quantity="{{ substep }}">{{ substep|ingredient_display }}</li>
                             {% endfor %}
                         </ul>
                         {% endfor %}
