--- a/templates/template.html
+++ b/templates/template.html
@@ -156,7 +156,7 @@
 
             {% if recipe.source %}
             <aside>
-                <p>Via <a href="{{ recipe.source }}">{{ recipe.source }}</a></p>
+                <p>Via <a href="{{ recipe.source }}" target="_blank">{{ recipe.source }}</a></p>
             </aside>
             {% endif %}
 
