It's mobile now
Added a media query

--- a/templates/template.html
+++ b/templates/template.html
@@ -21,6 +21,11 @@
         .container {
             display: flex;
         }
+        @media (max-width: 800px) {
+            .container {
+                flex-direction: column;
+            }
+        }
         nav {
             flex: 1;
         }
