--- a/templates/html/layout.html
+++ b/templates/html/layout.html
@@ -2,6 +2,7 @@
 <head>
     <title>{% if recipe %}{{ recipe.title }}{% else %}Recipes{% endif %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <style>
         header, footer, main, nav {
